kube-manifests/services/vtluug-site.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vtluug-site
  labels:
    app: vtluug-site
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vtluug-site
  template:
    metadata:
      labels:
        app: vtluug-site
    spec:
      containers:
      - name: site
        image: ghcr.io/vtluug/site:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 64Mi
            cpu: 0.5
          limits:
            memory: 64Mi
            cpu: 0.5
---
apiVersion: v1
kind: Service
metadata:
  name: vtluug-site-service
spec:
  selector:
    app: vtluug-site
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vtluug-site-ingress
spec:
  rules:
  - host: "vtluug.org"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: vtluug-site-service
            port:
              number: 80
