kube-manifests/services/wiki.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wiki-db-deployment
  labels:
    app: wiki-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wiki-db
  template:
    metadata:
      labels:
        app: wiki-db
    spec:
      volumes:
        - name: wiki-db-data
          persistentVolumeClaim:
            claimName: wiki-db-nfs-pvc
      securityContext:
        runAsUser: 999
        runAsGroup: 999
      containers:
      - name: mariadb
        image: mariadb:12.2.2
        ports:
        - containerPort: 3306
        resources:
          requests:
            memory: 1Gi
            cpu: 1
          limits:
            memory: 1Gi
            cpu: 1
        volumeMounts:
          - name: wiki-db-data
            mountPath: /var/lib/mysql
            readOnly: false
---
apiVersion: v1
kind: Service
metadata:
  name: wiki-db-service
spec:
  selector:
    app: wiki-db
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wiki-deployment
  labels:
    app: wiki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wiki
  template:
    metadata:
      labels:
        app: wiki
    spec:
      volumes:
        - name: wiki-images
          persistentVolumeClaim:
            claimName: wiki-images-nfs-pvc
        - name: wiki-localsettings
          configMap:
            name: wiki-config
        - name: wiki-localsettings-vtluug
          configMap:
            name: wiki-config-vtluug
        - name: wiki-localsettings-gobblerpedia
          configMap:
            name: wiki-config-gobblerpedia
      containers:
      - name: mediawiki
        image: vtluug/mediawiki-vtluug:1.1
        command: ['/bin/sh', '-c', 'sleep 7 && php /var/www/html/w/maintenance/update.php --quick ; apache2-foreground']
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 2Gi
            cpu: 2
          limits:
            memory: 2Gi
            cpu: 2
        volumeMounts:
          - name: wiki-images
            mountPath: /var/www/html/w/images
            readOnly: false
          - name: wiki-localsettings
            mountPath: /var/www/html/w/LocalSettings.php
            subPath: LocalSettings.php
            readOnly: true
          - name: wiki-localsettings-vtluug
            mountPath: /var/www/html/w/LocalSettings_vtluug.php
            subPath: LocalSettings_vtluug.php
            readOnly: true
          - name: wiki-localsettings-gobblerpedia
            mountPath: /var/www/html/w/LocalSettings_gobblerpedia.php
            subPath: LocalSettings_gobblerpedia.php
            readOnly: true
---
apiVersion: v1
kind: Service
metadata:
  name: wiki-service
spec:
  selector:
    app: wiki
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wiki-ingress
spec:
  rules:
  - host: "vtluug.org"
    http:
      paths:
      - pathType: Prefix
        path: "/w"
        backend:
          service:
            name: wiki-service
            port:
              number: 80
  - host: "gobblerpedia.org"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: wiki-service
            port:
              number: 80
  - host: "wiki.vtluug.org"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: wiki-service
            port:
              number: 80
